[package]

name = "piston_window"
version = "0.116.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["window", "piston"]
description = "The official Piston window wrapper for the Piston game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/piston_window.git"
homepage = "https://github.com/pistondevelopers/piston_window"
documentation = "https://docs.rs/piston_window"
exclude = ["*.png"]

[lib]

path = "src/lib.rs"
name = "piston_window"


[dependencies]
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
piston = "0.52.0"
piston2d-gfx_graphics = "0.72.0"
piston2d-graphics = "0.39.0"
piston-texture = "0.8.0"
shader_version = "0.7.0"


pistoncore-glutin_window = {git = "https://github.com/mbrubeck/glutin_window/tree/glutin22",package = "pistoncore-glutin_window" rev = "1a45c70abea73fab01813d2505b539415e306a3d",optional = true }

[features]
default = ["glutin"]
glutin = ["pistoncore-glutin_window"]
