[package]

name = "piston_window"
version = "0.116.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["window", "piston"]
description = "The official Piston window wrapper for the Piston game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/piston_window.git"
homepage = "https://github.com/pistondevelopers/piston_window"
documentation = "https://docs.rs/piston_window"
exclude = ["*.png"]

[lib]

path = "src/lib.rs"
name = "piston_window"


[dependencies]
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
piston = "0.52.0"
piston2d-gfx_graphics = {git = "https://github.com/lubosmudrak/gfx_graphics", rev = "d9001d7b923b270ef23af2e7a267b2eb28bd2a7c"}
piston2d-graphics = {git = "https://github.com/lubosmudrak/graphics", rev = "f5a3e7b13785e21228cd5ff02a1aa9687f9a28b2"}
piston-texture = "0.8.0"
shader_version = "0.7.0"


pistoncore-glutin_window = {git = "https://github.com/ZainlessBrombie/glutin_window",optional = true }

[features]
default = ["glutin"]
glutin = ["pistoncore-glutin_window"]
